# freefly

./: CMakeLists.txt  main.cpp
include/: Bluetooth.h  Bluetooth2.h
lib/: CMakeLists.txt
lib/Bluetooth/: Bluetooth.cpp  BluetoothAddress.cpp  BluetoothDevice.cpp
lib/Bt2/: Bluetooth2.cpp
lib/include/: BluetoothAddress.h  BluetoothDevice.h
